tests/lean/nonReserved.lean.expected.out
10 : Nat
nonReserved.lean:11:11: error: expected 'bla'
